# kumarpit.github.io

./: .gitignore  CNAME  README.md  TODO.md  about.md  astro.config.ts  index.html  me5.cabal  site.hs
.github/workflows/: deploy.yml
_site/: index.html
_site/css/: default.css  syntax.css
_site/notes/: 2025-08-04-bidirectional-typing-rules.html  2025-08-12-gradual-typing.html
_site/posts/: 2025-06-08-tail-calls-in-c.html
books/: 2025-08-14-untyped-systems.md  2025-09-01-typed-systems.md  2025-10-10-the-reasoned-schemer.md  art-of-learning.md  purely-functional-data-structures.md
css/: about.css  callout.css  default.css  experience.css  footer.css  landing.css  navigation.css  projects.css  style.css  styles.css  typography.css
docs/: about.html  archive.html  index.html
docs/books/: 2025-08-14-untyped-systems.html  2025-09-01-typed-systems.html  2025-10-10-the-reasoned-schemer.html  art-of-learning.html  purely-functional-data-structures.html
files/: Ledge It V2.webm
filters/: callout.lua
notes/: 2025-08-04-bidirectional-typing-rules.md  2025-08-12-gradual-typing.md  2025-08-14-untyped-systems.md  2025-09-01-typed-systems.md  2025-10-10-the-reasoned-schemer.md
pages/: about.html  experiences.html  illustrations.html  projects.html
posts/: 2025-06-08-tail-calls-in-c.md  2025-08-14-stlc-bidirectional.md
prism/: prism.js
research-kernels/: 2025-08-04-bidirectional-typing-rules.md  2025-08-12-gradual-typing.md  map_reduce.md  metakanren.md  mukanren.md
script/: script.js  toggleTheme.js
templates/: archive.html  default.html  home.html
(+33 files in other folders)
