name:               me5
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , containers
                  , data-default
                  , pandoc
                  , text
                  , filepath
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
